build: Add ruff linting and formatting
Add a pre-commit hook and CI step that run ruff check and ruff format.
Configure ruff in pyproject.toml with 79-char line length and full
E/F/W rule selection (equivalent to pycodestyle + pyflakes). Apply
ruff formatting across the codebase.

Also fixes a duplicate dict key (“actix/actix-web”) that ruff caught,
unused imports, and unused local variables.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,15 @@ filterwarnings = [
     "ignore::DeprecationWarning",
 ]
 
+[tool.ruff]
+line-length = 79
+
+[tool.ruff.lint]
+select = ["E", "F", "W"]
+
+[tool.ruff.format]
+quote-style = "double"
+
 [tool.coverage.run]
 source = ["."]
 omit = ["tests/*", "research/*"]
