test: Add comprehensive coverage infrastructure, and more tests
Add coverage reporting to pytest and CI configuration, and actual test
coverage to get us up to having 98% coverage.

For full details, see the DESIGN.md document.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,8 @@ addopts = [
     "-v",
     "--tb=short",
     "-ra",
+    "--cov=.",
+    "--cov-report=term-missing:skip-covered",
 ]
 filterwarnings = [
     "ignore::DeprecationWarning",
@@ -39,6 +41,7 @@ source = ["."]
 omit = ["tests/*", "research/*"]
 
 [tool.coverage.report]
+fail_under = 98
 exclude_lines = [
     "pragma: no cover",
     "if __name__ == .__main__.:",
