--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
-      - run: pip install pytest pytest-mock ruff
+      - run: pip install pytest pytest-mock pytest-cov ruff
       - run: ruff check gh-activity-chronicle tests/
       - run: ruff format --check gh-activity-chronicle tests/
-      - run: pytest tests/ -v
+      - run: pytest tests/
