--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ requires-python = ">=3.6"
 test = [
     "pytest>=7.0",
     "pytest-mock>=3.0",
+    "jsonschema>=4.0",
 ]
 
 [tool.pytest.ini_options]
